Layout bug fixes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -72,7 +72,6 @@ body {
 }
 
 .login > .card {
-  width: 25rem;
   margin: 0 auto;
   float: none;
 }
